[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Dialogue/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Dialogue/DialogueHandler.gd" type="Script" id=2]
[ext_resource path="res://Images/locations/coast.png" type="Texture" id=3]
[ext_resource path="res://Room Scripts/CoastRoom.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 1 )]

[node name="DialogueHandler" type="Node" parent="."]
script = ExtResource( 2 )
dialogue_path = "res://Dialogue Lines/Landfills (coastal).json"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 80.0
margin_top = 30.0
margin_right = 1360.0
margin_bottom = 750.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck" type="TextureButton" parent="TextureRect"]
margin_left = 80.0
margin_top = 390.0
margin_right = 320.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sewage" type="TextureButton" parent="TextureRect"]
margin_left = 90.0
margin_top = 50.0
margin_right = 540.0
margin_bottom = 280.0

[node name="garbage" type="TextureButton" parent="TextureRect"]
margin_left = 810.0
margin_top = 40.0
margin_right = 1180.0
margin_bottom = 250.0

[node name="back" type="TextureButton" parent="TextureRect"]
margin_left = 10.0
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="TextureRect"]
margin_left = 1160.0
margin_top = 260.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="CoastRoom" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="mouse_entered" from="TextureRect/duck" to="CoastRoom" method="_on_duck_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/duck" to="CoastRoom" method="_on_duck_mouse_exited"]
[connection signal="pressed" from="TextureRect/duck" to="CoastRoom" method="_on_duck_pressed"]
[connection signal="mouse_entered" from="TextureRect/sewage" to="CoastRoom" method="_on_sewage_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/sewage" to="CoastRoom" method="_on_sewage_mouse_exited"]
[connection signal="pressed" from="TextureRect/sewage" to="CoastRoom" method="_on_sewage_pressed"]
[connection signal="mouse_entered" from="TextureRect/garbage" to="CoastRoom" method="_on_garbage_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/garbage" to="CoastRoom" method="_on_garbage_mouse_exited"]
[connection signal="pressed" from="TextureRect/garbage" to="CoastRoom" method="_on_garbage_pressed"]
[connection signal="mouse_entered" from="TextureRect/back" to="CoastRoom" method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/back" to="CoastRoom" method="_on_back_mouse_exited"]
[connection signal="pressed" from="TextureRect/back" to="CoastRoom" method="_on_back_pressed"]
[connection signal="mouse_entered" from="TextureRect/next" to="CoastRoom" method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/next" to="CoastRoom" method="_on_next_mouse_exited"]
[connection signal="pressed" from="TextureRect/next" to="CoastRoom" method="_on_next_pressed"]
